fixes remaining tags, updates structure nbt statues